--- a/settings/setting.yaml
+++ b/settings/setting.yaml
@@ -5,6 +5,7 @@ default_headers:
   accept: application/json
 
 token                         : "Test"
+order_id                      : {}
 
 api: 
   url: 
